ffmpeg: fix segfault with too many output files

Fixes Ticket219

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>